--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,7 @@
   <span>{{ title }}</span>
   <span class="example-spacer"></span>
 </mat-toolbar>
-<router-outlet></router-outlet>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
